Prevent autocomplete from clipping inside user table, and blur focus once choice is made.

--- a/src/App.scss
+++ b/src/App.scss
@@ -248,6 +248,7 @@ $body-font: unquote("Lato, sans-serif");
     transition: background-color 100ms;
     .mdc-data-table__cell {
       @include typography.typography(body2);
+      overflow: visible;
     }
   }
 }
