--- a/src/components/admin/users/Users.scss
+++ b/src/components/admin/users/Users.scss
@@ -11,7 +11,6 @@
   align-items: flex-start;
   flex-wrap: wrap;
   max-width: 100vw;
-  overflow: hidden;
   &::before {
     content: "";
     position: absolute;
